BTL/BTL1/initial/src/main/d96/parser/D96.g4
grammar D96;

@lexer::header {
from lexererr import *
}

options {
	language = Python3;
}

// Program General Structure
program: bclasses EOF;
bclasses: bclass bclasses | bclass;
bclass: (CLASS ID ( COLON ID)?  class_body );

// Class Body
class_body: LP class_stmt_list? RP;
class_stmt_list: class_stmt class_stmt_list | class_stmt ;
class_stmt: constructor | destructor | funcdecl | ((valdecl | vardecl) SEMI);

// Statement in Class Body
funcdecl: (ID | DOLLARID) LB paramlist? RB blockstmt;
id_vas: (ID | DOLLARID) id_va (expr) ;
id_va: COMMA (ID | DOLLARID) id_va (expr) COMMA | COLON dttyp ASSOP;

valdecl: VAL idlist COLON dttyp | VAL id_vas;
vardecl: VAR idlist COLON dttyp | VAR id_vas;

constructor: CONSTRUCTOR LB paramlist? RB blockstmt;
destructor: DESTRUCTOR LB RB blockstmt;

// List
datatype: INT | FLOAT | BOOLEAN | STRING;
dttype: (ARRAY LC dttype COMMA INTLIT RC) | datatype;
dttyp: dttype | ID;

param: bidlist COLON dttyp;
paramlist: param SEMI paramlist | param;

bidlist: ID COMMA bidlist | ID;
idlist: (ID | DOLLARID) COMMA idlist | (ID | DOLLARID);
valuelist: expr COMMA valuelist | expr;
arraylist: array COMMA arraylist | array;

// Blockstmt = Method body
blockstmt: LP stmtlist? RP;
stmtlist: stmt stmtlist | stmt;
stmt: semi_stmt | forstmt | ifstmt | blockstmt;
semi_stmt: (bvaldecl | bvardecl | varass | returnal | funccall | brk | cont) SEMI ;

// Statement in Block Statement
// Attribute declaration
bid_vas: ID bid_va expr;
bid_va: COMMA ID bid_va expr COMMA | COLON dttyp ASSOP;
bvardecl: VAL bidlist COLON dttyp | VAL bid_vas;
bvaldecl: VAR bidlist COLON dttyp | VAR bid_vas;

// LHS + Variable assignment
scalar: scalar DOT ID | ID DCOLON DOLLARID | sd? ID;
index_scalar: index_scalar LC expr RC | scalar;
varass: scalar ASSOP expr | index_scalar ASSOP expr;

// Function call
func: ID LB valuelist? RB;
dollarfunc: DOLLARID LB valuelist? RB;
funccall: expr DOT func | ID DCOLON dollarfunc | sd func;

// Other Statement: Return + Continue + Break
returnal: RETURN expr?;
cont: CONTINUE;
brk: BREAK;

// Foreach statement
forstmt: FOREACH LB scalar IN expr DDOT expr (BY expr)? RB blockstmt;

// If Elseif Else statement
ifstmt: ifpart elseif_part? else_part?;
ifpart: IF LB expr RB blockstmt;
elseif_part: ELSEIF LB expr RB blockstmt elseif_part | ELSEIF LB expr RB blockstmt;
else_part: ELSE blockstmt;

// Expression Precedence and Associativity
expr: term1 STR term1 | term1;
term1: term2 RELOP term2 | term2 ;
term2: term2 OROP term3  | term2 ANDOP term3 | term3 ;
term3: term3 ADDOP term4 | term3 MINOP term4 | term4;
term4: term4 MULOP term5 | term4 DIVOP term5 | term4 REMOP term5 | term5;
term5: NOTOP term5 | term6;
term6: MINOP term6 | term7;
term7: term7 LC expr RC | term8;
term8: term8 DOT (ID | func) | sd (ID | func) | term9 ;
term9: ID DCOLON (DOLLARID | dollarfunc) | term10;
term10: (NEW ID LB valuelist? RB) | array
        | ID | (LB expr RB) | FALSE
        | TRUE | FLOATLIT | STRINGLIT 
        | INTLIT | ZERO | NULL;
sd: SELF DOT;

//Literal
// INT
fragment DF2: 	[1-9] ([0-9] | '_' [0-9])*;
INTLIT: (BIN | OCT | DEC | HEX){
            trim_result = self.text
            self.text = trim_result.replace('_', '')
        };
BIN: 	'0'[bB] '1' ([0-1] | '_' [0-1]+)*;
OCT: 	'0'[1-7]([0-7] | '_' [0-7]+)* ;
DEC: 	DF2;
HEX: 	'0' [xX] [1-9A-F] ([0-9A-F] | '_' [0-9A-F]+)*;
ZERO:   '0' | '0'[bB]'0' | '0'[xX]'0' | '00';

// FLOAT
FLOATLIT: ((DF2 | '0') '.' ([0-9])*
		| (DF2 | '0') '.' ([0-9])* [eE] [+-]? [0-9]+
		| (DF2 | '0') [eE] [+-]? [0-9]+ 
        | '.' ([0-9])* [eE] [+-]? [0-9]+) {
            trim_result = self.text
            self.text = trim_result.replace('_', '')
        };

// BOOLEAN
BCOMMENT: '##' .*? '##' -> skip;

// STRING
fragment QQ: '\'''"';
fragment LEGAL_CHAR: ~[\b\r\n\t\f\\'"] | LEGAL_ESC;
fragment S: '\'' ~'"';
fragment LEGAL_ESC: S | '\\' [brntf'\\];
fragment ILLEGAL_ESC: '\\' ~[brntf'\\];
STRINGLIT: '"' (LEGAL_CHAR | QQ)* '"' {self.text = self.text[1:-1]};
UNCLOSE_STRING: ('"' (LEGAL_CHAR | QQ)*) {raise UncloseString(self.text[1:])};
ILLEGAL_ESCAPE: '"' (LEGAL_CHAR | QQ)* ILLEGAL_ESC  {
    raise IllegalEscape(self.text[1:])
};

// ARRAY
array: (ARRAY LB (valuelist | arraylist) RB ) | (ARRAY LB RB);

// Keyword
BREAK: 'Break';
CONTINUE: 'Continue';
IF: 'If';
ELSEIF: 'Elseif';
ELSE: 'Else';
FOREACH: 'Foreach';
TRUE: 'True';
FALSE: 'False';
ARRAY: 'Array';
INT: 'Int';
IN: 'In';
FLOAT: 'Float';
BOOLEAN: 'Boolean';
STRING: 'String';
RETURN: 'Return';
NULL: 'Null';
CLASS: 'Class';
VAL: 'Val';
VAR: 'Var';
CONSTRUCTOR: 'Constructor';
DESTRUCTOR: 'Destructor';
NEW: 'New';
BY: 'By';
SELF: 'Self';

// STRING OPS
STR: '==.' | '+.';

// BOOLEAN OPS
RELOP: '==' | '!=' | '>=' | '<=' | '>' | '<';
NOTOP: '!';
ANDOP: '&&';
OROP:  '||';

// MATH OPS
ADDOP: '+';
MINOP: '-';
MULOP: '*';
DIVOP: '/';
REMOP: '%';
ASSOP: '=';

// Special Operator
LB: '(';
RB: ')';
LP: '{';
RP: '}';
LC: '[';
RC: ']';
DCOLON: '::';
COLON: ':';
COMMA: ',';
SEMI: ';';
DDOT: '..';
DOT: '.';

// Identifier
DOLLARID: '$' ([a-z] | [A-Z] | '_' | [0-9])+; 
ID: ([a-z] | [A-Z] | '_')([a-z] | [A-Z] | '_' | [0-9])*;
WS: [ \b\f\t\r\n]+ -> skip; // skip spaces, tabs, newlines

fragment NONCOMMENT: '#'~[#];
ERROR_CHAR: . {raise ErrorToken(self.text)};
