BTL/BTL1/initial/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elseif'", "'Else'", 
                     "'Foreach'", "'True'", "'False'", "'Array'", "'Int'", 
                     "'In'", "'Float'", "'Boolean'", "'String'", "'Return'", 
                     "'Null'", "'Class'", "'Val'", "'Var'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "'Self'", "<INVALID>", 
                     "<INVALID>", "'!'", "'&&'", "'||'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'::'", "':'", "','", "';'", "'..'", "'.'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "BIN", "OCT", "DEC", "HEX", 
                      "ZERO", "FLOATLIT", "BCOMMENT", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", "INT", 
                      "IN", "FLOAT", "BOOLEAN", "STRING", "RETURN", "NULL", 
                      "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "SELF", "STR", "RELOP", "NOTOP", "ANDOP", 
                      "OROP", "ADDOP", "MINOP", "MULOP", "DIVOP", "REMOP", 
                      "ASSOP", "LB", "RB", "LP", "RP", "LC", "RC", "DCOLON", 
                      "COLON", "COMMA", "SEMI", "DDOT", "DOT", "DOLLARID", 
                      "ID", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_bclasses = 1
    RULE_bclass = 2
    RULE_class_body = 3
    RULE_class_stmt_list = 4
    RULE_class_stmt = 5
    RULE_funcdecl = 6
    RULE_id_vas = 7
    RULE_id_va = 8
    RULE_valdecl = 9
    RULE_vardecl = 10
    RULE_constructor = 11
    RULE_destructor = 12
    RULE_datatype = 13
    RULE_dttype = 14
    RULE_dttyp = 15
    RULE_param = 16
    RULE_paramlist = 17
    RULE_bidlist = 18
    RULE_idlist = 19
    RULE_valuelist = 20
    RULE_arraylist = 21
    RULE_blockstmt = 22
    RULE_stmtlist = 23
    RULE_stmt = 24
    RULE_semi_stmt = 25
    RULE_bid_vas = 26
    RULE_bid_va = 27
    RULE_bvardecl = 28
    RULE_bvaldecl = 29
    RULE_scalar = 30
    RULE_index_scalar = 31
    RULE_varass = 32
    RULE_func = 33
    RULE_dollarfunc = 34
    RULE_funccall = 35
    RULE_returnal = 36
    RULE_cont = 37
    RULE_brk = 38
    RULE_forstmt = 39
    RULE_ifstmt = 40
    RULE_ifpart = 41
    RULE_elseif_part = 42
    RULE_else_part = 43
    RULE_expr = 44
    RULE_term1 = 45
    RULE_term2 = 46
    RULE_term3 = 47
    RULE_term4 = 48
    RULE_term5 = 49
    RULE_term6 = 50
    RULE_term7 = 51
    RULE_term8 = 52
    RULE_term9 = 53
    RULE_term10 = 54
    RULE_sd = 55
    RULE_array = 56

    ruleNames =  [ "program", "bclasses", "bclass", "class_body", "class_stmt_list", 
                   "class_stmt", "funcdecl", "id_vas", "id_va", "valdecl", 
                   "vardecl", "constructor", "destructor", "datatype", "dttype", 
                   "dttyp", "param", "paramlist", "bidlist", "idlist", "valuelist", 
                   "arraylist", "blockstmt", "stmtlist", "stmt", "semi_stmt", 
                   "bid_vas", "bid_va", "bvardecl", "bvaldecl", "scalar", 
                   "index_scalar", "varass", "func", "dollarfunc", "funccall", 
                   "returnal", "cont", "brk", "forstmt", "ifstmt", "ifpart", 
                   "elseif_part", "else_part", "expr", "term1", "term2", 
                   "term3", "term4", "term5", "term6", "term7", "term8", 
                   "term9", "term10", "sd", "array" ]

    EOF = Token.EOF
    INTLIT=1
    BIN=2
    OCT=3
    DEC=4
    HEX=5
    ZERO=6
    FLOATLIT=7
    BCOMMENT=8
    STRINGLIT=9
    UNCLOSE_STRING=10
    ILLEGAL_ESCAPE=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSEIF=15
    ELSE=16
    FOREACH=17
    TRUE=18
    FALSE=19
    ARRAY=20
    INT=21
    IN=22
    FLOAT=23
    BOOLEAN=24
    STRING=25
    RETURN=26
    NULL=27
    CLASS=28
    VAL=29
    VAR=30
    CONSTRUCTOR=31
    DESTRUCTOR=32
    NEW=33
    BY=34
    SELF=35
    STR=36
    RELOP=37
    NOTOP=38
    ANDOP=39
    OROP=40
    ADDOP=41
    MINOP=42
    MULOP=43
    DIVOP=44
    REMOP=45
    ASSOP=46
    LB=47
    RB=48
    LP=49
    RP=50
    LC=51
    RC=52
    DCOLON=53
    COLON=54
    COMMA=55
    SEMI=56
    DDOT=57
    DOT=58
    DOLLARID=59
    ID=60
    WS=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bclasses(self):
            return self.getTypedRuleContext(D96Parser.BclassesContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.bclasses()
            self.state = 115
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BclassesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bclass(self):
            return self.getTypedRuleContext(D96Parser.BclassContext,0)


        def bclasses(self):
            return self.getTypedRuleContext(D96Parser.BclassesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_bclasses

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBclasses" ):
                return visitor.visitBclasses(self)
            else:
                return visitor.visitChildren(self)




    def bclasses(self):

        localctx = D96Parser.BclassesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bclasses)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.bclass()
                self.state = 118
                self.bclasses()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.bclass()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def class_body(self):
            return self.getTypedRuleContext(D96Parser.Class_bodyContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_bclass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBclass" ):
                return visitor.visitBclass(self)
            else:
                return visitor.visitChildren(self)




    def bclass(self):

        localctx = D96Parser.BclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bclass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(D96Parser.CLASS)
            self.state = 124
            self.match(D96Parser.ID)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 125
                self.match(D96Parser.COLON)
                self.state = 126
                self.match(D96Parser.ID)


            self.state = 129
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def class_stmt_list(self):
            return self.getTypedRuleContext(D96Parser.Class_stmt_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.LP)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.DOLLARID) | (1 << D96Parser.ID))) != 0):
                self.state = 132
                self.class_stmt_list()


            self.state = 135
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_stmt(self):
            return self.getTypedRuleContext(D96Parser.Class_stmtContext,0)


        def class_stmt_list(self):
            return self.getTypedRuleContext(D96Parser.Class_stmt_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_stmt_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_stmt_list" ):
                return visitor.visitClass_stmt_list(self)
            else:
                return visitor.visitChildren(self)




    def class_stmt_list(self):

        localctx = D96Parser.Class_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_stmt_list)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.class_stmt()
                self.state = 138
                self.class_stmt_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.class_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(D96Parser.FuncdeclContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def valdecl(self):
            return self.getTypedRuleContext(D96Parser.ValdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_stmt" ):
                return visitor.visitClass_stmt(self)
            else:
                return visitor.visitChildren(self)




    def class_stmt(self):

        localctx = D96Parser.Class_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_stmt)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.destructor()
                pass
            elif token in [D96Parser.DOLLARID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.funcdecl()
                pass
            elif token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL]:
                    self.state = 146
                    self.valdecl()
                    pass
                elif token in [D96Parser.VAR]:
                    self.state = 147
                    self.vardecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 150
                self.match(D96Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def paramlist(self):
            return self.getTypedRuleContext(D96Parser.ParamlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = D96Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 155
            self.match(D96Parser.LB)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 156
                self.paramlist()


            self.state = 159
            self.match(D96Parser.RB)
            self.state = 160
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_vasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_va(self):
            return self.getTypedRuleContext(D96Parser.Id_vaContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_id_vas

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_vas" ):
                return visitor.visitId_vas(self)
            else:
                return visitor.visitChildren(self)




    def id_vas(self):

        localctx = D96Parser.Id_vasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_vas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            _la = self._input.LA(1)
            if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 163
            self.id_va()

            self.state = 164
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_vaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def id_va(self):
            return self.getTypedRuleContext(D96Parser.Id_vaContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def ASSOP(self):
            return self.getToken(D96Parser.ASSOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_id_va

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_va" ):
                return visitor.visitId_va(self)
            else:
                return visitor.visitChildren(self)




    def id_va(self):

        localctx = D96Parser.Id_vaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_va)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(D96Parser.COMMA)
                self.state = 167
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 168
                self.id_va()

                self.state = 169
                self.expr()
                self.state = 170
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(D96Parser.COLON)
                self.state = 173
                self.dttyp()
                self.state = 174
                self.match(D96Parser.ASSOP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def id_vas(self):
            return self.getTypedRuleContext(D96Parser.Id_vasContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_valdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValdecl" ):
                return visitor.visitValdecl(self)
            else:
                return visitor.visitChildren(self)




    def valdecl(self):

        localctx = D96Parser.ValdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valdecl)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(D96Parser.VAL)
                self.state = 179
                self.idlist()
                self.state = 180
                self.match(D96Parser.COLON)
                self.state = 181
                self.dttyp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.match(D96Parser.VAL)
                self.state = 184
                self.id_vas()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def id_vas(self):
            return self.getTypedRuleContext(D96Parser.Id_vasContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = D96Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vardecl)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(D96Parser.VAR)
                self.state = 188
                self.idlist()
                self.state = 189
                self.match(D96Parser.COLON)
                self.state = 190
                self.dttyp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.match(D96Parser.VAR)
                self.state = 193
                self.id_vas()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(D96Parser.ParamlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor" ):
                return visitor.visitConstructor(self)
            else:
                return visitor.visitChildren(self)




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 197
            self.match(D96Parser.LB)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 198
                self.paramlist()

